feat: Added all the reqired classes and interfaces for making server calls using Retrofit 2.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Telematics</string>
+    <string name="server_url">https://api.proemion.com</string>
 </resources>
