--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Telematics</string>
-    <string name="server_url">https://api.proemion.com</string>
+    <string name="server_url">https://api.proemion.com/</string>
 </resources>
